[metadata]
version = attr: package.__version__

[tool.pytest]
xfail_struct = false
addopts =
    --verbose
    --doctest-module
    --cov src
    --cov-report term-missing
    --cov-report html::documentation/build/coverage
    --cov-report xml:documentation/build/coverage.xml
testpath = tests

[coverage:run]
branch = true
parallel = true
omit =
    *__init__*

[coverage:paths]
source =
    src/

[coverage:html]
directory = documentation/build/coverage

[coverage:xml]
output = documentation/build/coverage.xml